# ai-doctor-bot

./: .gitignore  Containerfile  README.md  app.py  config.py  log.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: image.yaml
charts/chart/: Chart.yaml  values.yaml
charts/chart/templates/: deployment.yaml
prisma/: schema.prisma
