[tool.poetry]
name = "ai-doctor-bot"
version = "0.1.0"
description = ""
authors = ["GwonHyeok <me@ghyeok.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpraw = "^7.8.1"
langchain = "^0.3.19"
dotenv = "^0.9.9"
prisma = "^0.15.0"
certifi = "^2025.1.31"
langchain-openai = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
